# 42_py

./: README.md
rank_02/: cp_all_pdfs.sh
rank_02/py_00/: .main.py.swp  .swp  main.py
rank_02/py_00/ex0/: .ft_hello_garden.py.swp  ft_hello_garden.py
rank_02/py_00/ex1/: ft_plot_area.py
rank_02/py_00/ex2/: ft_harvest_total.py
rank_02/py_00/ex3/: ft_plant_age.py
rank_02/py_00/ex4/: ft_water_reminder.py
rank_02/py_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
rank_02/py_00/ex6/: ft_garden_summary.py
rank_02/py_00/ex7/: .ft_seed_inventory.py.swp  ft_seed_inventory.py
rank_02/py_01/: .ft_plant_growth.py.swp  .gdb_history  .test.py.swp  test.py
rank_02/py_01/ex0/: .ft_garden_intro.py.swp  ft_garden_intro.py  ft_garden_intro.py#
rank_02/py_01/ex1/: .ft_garden_data.py.swo  .ft_garden_data.py.swp  ft_garden_data.py
rank_02/py_01/ex2/: .ft_plant_growth.py.swp  ft_plant_growth.py
rank_02/py_01/ex3/: .ft_plant_factory.py.swp  ft_plant_factory.py
rank_02/py_01/ex4/: .ft_garden_security.py.swp  ft_garden_security.py
rank_02/py_01/ex5/: .ft_plant_types.py.swp  ft_plant_types.py
rank_02/py_01/ex6/: .ft_garden_analytics.py.swp  ft_garden_analytics.py
rank_02/py_02/ex0/: .ft_first_exception.py.swp  ft_first_exception.py
rank_02/py_02/ex1/: .a.py.swp  .ft_different_errors.py.swp  a.py  ft_different_errors.py
rank_02/py_02/ex2/: .ft_custom_errors.py.swp  ft_custom_errors.py
rank_02/py_02/ex3/: .ft_finally_block.py.swp  ft_finally_block.py
rank_02/py_02/ex4/: .ft_raise_errors.py.swp  ft_raise_errors.py
rank_02/py_02/ex5/: .ft_garden_management.py.swp  ft_garden_management.py
rank_02/py_03/ex0/: .ft_command_quest.py.swp  ft_command_quest.py
rank_02/py_03/ex1/: .ft_score_analytics.py.swp  ft_score_analytics.py
rank_02/py_03/ex2/: .ft_coordinate_system.py.swp  ft_coordinate_system.py
rank_02/py_03/ex3/: .ft_achievement_tracker.py.swp  ft_achievement_tracker.py
rank_02/py_03/ex4/: .ft_inventory_system.py.swp  ft_inventory_system.py
rank_02/py_03/ex5/: .ft_data_stream.py.swp  ft_data_stream.py
rank_02/py_03/ex6/: .ft_analytics_dashboard.py.swp  ft_analytics_dashboard.py
rank_02/py_04/: sample_data.json
rank_02/py_04/ex0/: ft_ancient_text.py
rank_02/py_04/ex1/: ft_archive_creation.py
rank_02/py_04/ex2/: ft_stream_management.py
rank_02/py_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
rank_02/py_07/: .battle.py.swp  .capacitor.py.swo  .capacitor.py.swp  .tournament.py.swp  __init__.py  battle.py  capacitor.py  tournament.py
rank_02/py_08/ex1/: loading.py  pyproject.toml  requirements.txt
rank_02/py_09/: .alien_contact.py.swp
(+61 files in other folders)
