# *************************************************************************** #
#                                                                             #
#                                                        :::      ::::::::    #
#    pyproject.toml                                    :+:      :+:    :+:    #
#                                                    +:+ +:+         +:+      #
#    By: maprunty <maprunty@student.42heilbronn.d  +#+  +:+       +#+         #
#                                                +#+#+#+#+#+   +#+            #
#    Created: 2026/04/24 09:18:31 by maprunty         #+#    #+#              #
#    Updated: 2026/04/25 10:46:35 by maprunty        ###   ########.fr        #
#                                                                             #
# *************************************************************************** #

[project]
name = "The_Matrix"
version = "0.1.0"
description = "Welcome to the Real World of Data Engineering"
authors = [{name = "maprunty", email = "maprunty@student.42heilbronn.de"}]
requires-python = ">=3.10"

dependencies = [
"pandas (==2.1.0)",
"matplotlib (==3.7.2)",
"pandas-stubs",
"types-requests",
"numpy (==1.25.0)",
]

[tool.poetry]
package-mode = false
